Adding stylelint fixing scss and adding to husky precommit

--- a/apps/portfolio/src/app/pages/about/About.scss
+++ b/apps/portfolio/src/app/pages/about/About.scss
@@ -7,6 +7,7 @@
   // Header Element
   &__header {
     @include text-center;
+
     margin-bottom: $spacing-xl;
   }
 
@@ -29,6 +30,7 @@
   // Bio Card Element
   &__bio-card {
     @include card;
+
     height: 100%;
 
     &-content {
@@ -39,6 +41,7 @@
   // Skills Card Element
   &__skills-card {
     @include card;
+
     height: 100%;
 
     &-content {
@@ -56,6 +59,7 @@
 
     &-header {
       @include flex-between;
+
       margin-bottom: $spacing-xs;
     }
 
@@ -64,6 +68,7 @@
       border-radius: $border-radius-sm;
       background-color: $color-gray-100;
 
+      // stylelint-disable-next-line
       .MuiLinearProgress-bar {
         border-radius: $border-radius-sm;
       }
@@ -81,6 +86,7 @@
     &-card {
       @include card;
       @include card-hover;
+
       height: 100%;
 
       &-content {
