--- a/apps/portfolio/src/app/styles/index.scss
+++ b/apps/portfolio/src/app/styles/index.scss
@@ -10,7 +10,7 @@
 }
 
 body {
-  font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
+  font-family: Inter, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
     sans-serif;
   margin: 0;
   padding: 0;
